style.css
@font-face {
  font-family: 'Montserrat';
  src: url('/Fonts/Montserrat-Regular.ttf');
}
@font-face {
  font-family: 'Montserrat Bold';
  src: url('/Fonts/Montserrat-Bold.ttf');
}
@font-face {
  font-family: 'Roboto';
  src: url('/Fonts/Roboto-Regular.ttf');
}
@font-face {
  font-family: 'Roboto Bold';
  src: url('/Fonts/Roboto-Bold.ttf');
}

/*****************/
/**** COLORS *****/
/*****************/
:root {
  /*
Light shades #EEEEEE GALLERY
- Use this color as the background for your dark-on-light designs, or the text color of an inverted design.
*/
  --gallery: #eeeeee;

  /*
Light accent #7DAEC7 GLACIER
- Accent colors can be used to bring attention to design elements by contrasting with the rest of the palette.
*/
  --glacier: #7daec7;

  /*
Main brand color #2A44C8 CERULEAN BLUE
- This color should be eye-catching but not harsh. It can be liberally applied to your layout as its main identity.
*/
  --cerulean-blue: #2a44c8;

  /*
Dark accent #4B618D KASHMIR BLUE
- Another accent color to consider. Not all colors have to be used - sometimes a simple color scheme works best.
*/
  --kashmir-blue: #4b618d;

  /*
Dark shades #1C2325 SHARK
- Use as the text color for dark-on-light designs, or as the background for inverted designs.
*/
  --shark: #1c2325;
}

/*****************/
/**** WRAPPERS ***/
/*****************/

.outer-wrapper {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.inner-wrapper {
  width: 80%;
  margin: 0 auto;
  max-width: 1100px;
}
/*****************/
/**** HEADER ****/
/*****************/

.header-outer {
  font-family: 'Montserrat Bold', sans-serif;
  color: white;
  text-shadow: 0 2px 6px #000000;
  height: 670px;
  background-image: url(./Assets/hero4.jpg);
  background-size: cover;
  background-position: center;
}

.header-inner {
  position: relative;
  display: flex;
  height: 700px;
}

.header-text-container {
  align-self: center;
}

header h1 {
  margin: 20px 0;
  font-size: 82px;
}
header h2 {
  margin: 20px 0;
  font-size: 50px;
}

header h3 {
  font-family: 'Roboto';
  font-size: 30px;
}

header span {
  font-family: 'Roboto Bold', sans-serif;
}

.header-links {
  position: absolute;
  display: flex;
  flex-direction: row;
  top: 10%;
  right: 0%;
}

.anchor-div {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 10px;
  width: 75px;
  height: 75px;
  border-radius: 50%;
  border: white 3px solid;
}

.header-profile-picture {
  position: absolute;
  justify-self: flex-end;
  bottom: -5%;
  right: 0%;
}

.header-profile-picture img {
  width: 333px;
  height: 333px;
  border-radius: 50%;
  border: white 5px solid;
}

/*****************/
/**** SECTIONS ***/
/*****************/

section {
  font-family: 'Montserrat';
}

.section-header {
  font-size: 50px;
  line-height: 1;
  padding: 10px 15px;
  margin-bottom: 100px;
  font-family: 'Montserrat Bold';
  background-color: var(--cerulean-blue);
  color: white;
}

.section-sub-header {
  font-size: 38px;
  padding: 10px 15px;
  font-family: 'Montserrat Bold';
  color: var(--cerulean-blue);
  margin-bottom: 50px;
}

.section-outer-gallery {
  background: var(--gallery);
  padding: 150px 0;
}
.section-outer {
  padding: 150px 0;
}

.section-inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 24px;
  line-height: 1.4;
}

/*****************/
/**** SECTION ****/
/***** INTRO *****/
/*****************/

.intro-figure {
  width: 70px;
}

.intro-text {
  font-size: 30px;
}

/*****************/
/**** SECTION ****/
/***** TECH ******/
/*****************/

.tech-paragraph {
  font-size: 30px;
  text-align: center;
}

.tech-highlight {
  color: var(--cerulean-blue);
}

/*****************/
/**** SECTION ****/
/**** FEATURED ***/
/**** PROJECTS ***/
/*****************/

.featured-projects-wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 50px;
  margin-bottom: 100px;
}

.project-card {
  transform: translateY(0%);
  transition: transform 0.5s;
  display: flex;
  flex-direction: column;
  gap: 5px;
  text-decoration: none;
  position: relative;
}

.project-card:hover {
  transform: translateY(-1%);
  transition: transform 0.3s;
}
.project-card:hover .project-info-header,
.project-card:hover .project-info {
  text-decoration: underline;
}

.thumbnail-wrapper {
  background-size: cover;
  background-position: center;
  height: 300px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
  font-size: 26px;
}

.thumbnail-title {
  font-family: 'Montserrat Bold';
  color: white;
  position: absolute;
}

.music-master {
  background-image: linear-gradient(180deg, #1c232580, #1c232580),
    url(./Assets/projects-thumbnails/musicmaster.PNG);
}
.project-card:hover > .music-master {
  background-image: linear-gradient(#1c23255e, #1c23255e),
    url(./Assets/projects-thumbnails/musicmaster.PNG);
}
.forkify {
  background-image: linear-gradient(180deg, #1c232580, #1c232580),
    url(./Assets/projects-thumbnails/forkify.PNG);
}
.project-card:hover > .forkify {
  background-image: linear-gradient(#1c23255e, #1c23255e),
    url(./Assets/projects-thumbnails/forkify.PNG);
}
.mapty {
  background-image: linear-gradient(180deg, #1c232580, #1c232580),
    url(./Assets/projects-thumbnails/mapty.PNG);
}
.project-card:hover > .mapty {
  background-image: linear-gradient(#1c23255e, #1c23255e),
    url(./Assets/projects-thumbnails/mapty.PNG);
}
.guess-my-number {
  background-image: linear-gradient(180deg, #1c232580, #1c232580),
    url(./Assets/projects-thumbnails/guessmynumber.PNG);
}
.project-card:hover > .guess-my-number {
  background-image: linear-gradient(#1c23255e, #1c23255e),
    url(./Assets/projects-thumbnails/guessmynumber.PNG);
}

.project-info-header {
  font-family: 'Roboto Bold', sans-serif;
  color: var(--cerulean-blue);
  font-size: 24px;
}
.project-info {
  font-family: 'Roboto', sans-serif;
  color: black;
  font-size: 24px;
  line-height: 1.4;
}

.project-tags li {
  font-family: 'Roboto', sans-serif;
  color: white;
  padding: 5px 10px;
  background-color: var(--glacier);
  display: inline;
  font-size: 16px;
  margin-right: 5px;
}

/*****************/
/**** SECTION ****/
/***** OTHER *****/
/**** PROJECTS ***/
/*****************/

.other-projects {
  align-self: flex-start;
}

.other-project {
  display: flex;
  flex-direction: row;
  gap: 10px;
  align-items: center;
}

.fancy-arrows {
  color: var(--cerulean-blue);
}

.other-project-tags {
  margin-bottom: 30px;
}

/*****************/
/**** SECTION ****/
/**** THOUGHTS ***/
/**** PROJECTS ***/
/*****************/

.thoughts-wrapper {
  line-height: 1.6;
  margin-bottom: 100px;
}

.more-thoughts-wrapper {
  line-height: 1.4;
  font-size: 20px;
}

/*****************/
/**** SECTION ****/
/**** SKILLS *****/
/*****************/

.skills-container-wrapper {
  line-height: 1.6;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  font-family: 'Roboto';
}

.skills-container {
  text-align: center;
  padding: 20px 50px;
  width: 220px;
}

.skills-container-title {
  color: var(--cerulean-blue);
}

/*****************/
/**** SECTION ****/
/***** MORE ******/
/*****************/

.more-links {
  margin: 50px;
  gap: 200px;
  display: flex;
  flex-direction: row;
}

.more-link-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 10px;
  width: 75px;
  height: 75px;
  border-radius: 50%;
}

.more-link-wrapper img {
  border: var(--cerulean-blue) 3px solid;
  border-radius: 50%;
}

/*****************/
/***** FOOTER ****/
/*****************/

.footer-outer {
  padding: 150px 0;
  background-color: var(--shark);
}

.footer-inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 24px;
  line-height: 1.4;
}
.footer-header {
  font-size: 50px;
  line-height: 1;
  padding: 10px 15px;
  margin-bottom: 70px;
  font-family: 'Montserrat Bold';
  background-color: var(--shark);
  color: white;
}

.footer-text {
  font-family: 'Montserrat';
  text-align: center;
  color: white;
}

.footer-link {
  color: white;
}
.footer-link:hover,
.footer-link:focus {
  font-weight: bold;
}

/*****************/
/***** MEDIA *****/
/*****************/

@media (max-width: 800px) {
  p {
    font-size: 17px !important;
  }
  /*****************/
  /**** MOBILE *****/
  /**** HEADER *****/
  /*****************/
  .header-outer {
    height: 520px;
  }
  .header-inner {
    height: 520px;
  }
  .header-text-container {
    position: absolute;
    top: 25%;
  }
  .header-links {
    top: 10%;
  }
  .anchor-div {
    margin-left: 5px;
    width: 40px;
    height: 40px;
    border: white 2px solid;
  }
  .anchor-div img {
    width: 20px;
    height: 20px;
  }
  .header-profile-picture {
    bottom: -4%;
    right: -5%;
  }
  .header-profile-picture img {
    width: 180px;
    height: 180px;
    border: white 3px solid;
  }
  header h1 {
    margin: 10px 0;
    font-size: 40px;
  }
  header h2 {
    margin: 10px 0;
    font-size: 30px;
  }
  header h3 {
    font-family: 'Roboto';
    font-size: 24px;
  }
  /*****************/
  /**** MOBILE *****/
  /**** SECTION ****/
  /*****************/

  .section-header {
    font-size: 22px;
    line-height: 1;
    padding: 10px 15px;
    margin-bottom: 40px;
  }

  .section-sub-header {
    font-size: 21px;
    padding: 10px 15px;
    margin-bottom: 20px;
  }
  .section-outer-gallery {
    padding: 50px 0;
  }
  .section-outer {
    padding: 50px 0;
  }

  .section-inner {
    font-size: 16px;
    line-height: 1.4;
  }
  /*****************/
  /**** MOBILE *****/
  /**** SECTION ****/
  /***** INTRO *****/
  /*****************/
  .intro-figure {
    width: 55px;
  }
  .intro-text {
    font-size: 17px;
  }
  /*****************/
  /**** MOBILE *****/
  /**** SECTION ****/
  /**** FEATURED ***/
  /**** PROJECTS ***/
  /*****************/

  .featured-projects-wrapper {
    display: grid;
    grid-template-columns: 1fr;
    gap: 40px;
    margin-bottom: 50px;
  }

  .project-info-header {
    font-size: 20px;
  }
  .project-info {
    font-size: 20px;
  }

  .project-tags li {
    padding: 2px;
    font-size: 14px;
    margin-right: 3px;
  }

  /*****************/
  /**** MOBILE *****/
  /**** SECTION ****/
  /***** OTHER *****/
  /**** PROJECTS ***/
  /*****************/

  .other-project {
    text-decoration: none;
    flex-direction: column;
    align-items: flex-start;
    gap: 0px;
  }

  .other-project-tags {
    margin-bottom: 30px;
  }

  /*****************/
  /**** MOBILE *****/
  /**** SECTION ****/
  /**** THOUGHTS ***/
  /**** PROJECTS ***/
  /*****************/

  .thoughts-wrapper {
    margin-bottom: 50px;
  }

  .more-thoughts-wrapper {
    line-height: 1.4;
  }

  /*****************/
  /**** MOBILE *****/
  /**** SECTION ****/
  /**** SKILLS *****/
  /*****************/

  .skills-container {
    padding: 10px 0;
    width: 150px;
  }

  /*****************/
  /**** MOBILE *****/
  /**** SECTION ****/
  /***** MORE ******/
  /*****************/

  .more-links {
    gap: 20px;
    margin: 20px;
  }
  .more-link-wrapper img {
    width: 70px;
  }

  /*****************/
  /**** MOBILE *****/
  /**** FOOTER *****/
  /*****************/

  .footer-outer {
    padding: 80px 0;
  }
  .footer-header {
    font-size: 21px;
    padding: 10px 15px;
    margin-bottom: 40px;
    color: white;
  }
}

@media (min-width: 1024px) {
  body,
  html {
    max-width: 1920px;
    margin: auto;
  }
}

